fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.6.3 (not released yet):
  - Dont fail when e2fsck returns 1 in extfs_mkfs() since it means the filesystem has been fixed
  - Display the percentage of the operation which has been completed when verbose >= 1 (sort of progress bar)
  - Display information about physical disks as well as partitions in "fsarchiver probe <mode>"
  - Fixed bug with archive splitting: the split size was sometimes incorrect due to an integer overflow
  - Added option "-e <pattern>" to exclude files/dirs. It works for both archiving and extracting.
  - Added support for long options (--option) using getopt_long
  - Removed the dependency on "which" to find the path to a program
  - Accept all libgcrypt versions >= 1.2.4 at runtime in gcry_check_version
  - Using functions from libuuid instead of duplicating code in uuid.[ch]
* 0.6.2 (2009-12-08):
  - Dynamic memory allocation for ntfs specific extended-attributes in create.c
  - Fix related the the ntfs attributes when lgetxattr returns a negative size
  - Saves the name of the original device where the filesystem is stored (FSYSHEADKEY_ORIGDEV)
  - Fixed enable options in configure: "--enable-xxx" had the opposite effect (Thanks to horhe)
  - Exit with an error if the user wants to use a compression level which is not supported (Thanks to mbiebl)
  - Fixed crash when mount fails (mntbyfsa was set to true and not clear if mount fails)
  - Fixed code for ntfs symlinks (they have to be recreated as normal files and dirs + special attributes)
  - Changed the requirement from ntfs3g-AR (advanced release) to ntfs3g >= 20091114 (standard release) for ntfs
  - Improvements and fixes in the autotools build chain files (contribution from Michael Biebl)
  - Added option "-L" to specify the label of the archive: it's just a comment about the contents