@@ -2,6 +2,7 @@ fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
 =====================================================================
 * 0.6.3 (not released yet):
   - Dont fail when e2fsck returns 1 in extfs_mkfs() since it means the filesystem has been fixed
+  - Extended options (stride and stripe_width), max_mount_count, check_interval are now preserved for ext{2,3,4}
   - Display the percentage of the operation which has been completed when verbose >= 1 (sort of progress bar)
   - Display information about physical disks as well as partitions in "fsarchiver probe <mode>"
   - Fixed bug with archive splitting: the split size was sometimes incorrect due to an integer overflow
